draft2: organize page, add colors from UX style guide

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 
 		<!-- Intro -->
 		<section class="intro">
-			<header>
+			<header class="cta-header">
 				<!-- MAIN LOGO -->
 				<h1 class="logo-text">one line a day</h1>
 				<!-- ONLINE STORE BUTTONS -->
-				<img class="image app-store-btn" src="images/apple-button.png" alt="Get it on iOS: Apple Store">
-				<img class="image app-store-btn" src="images/google-play-button.png" alt="Get it on Android: Google Play Store">
-				<p>a quick and easy way to make memories</p>
+			<a href="#"><img class="image app-store-btn" src="images/apple-button.png" alt="Get it on iOS: Apple Store"></a>
+			<a href="#"><img class="image app-store-btn" src="images/google-play-button.png" alt="Get it on Android: Google Play Store"></a>
+				<!-- <p>a quick and easy way to make memories</p> -->
 				<ul class="actions">
 					<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 				</ul>
@@ -56,7 +56,7 @@
 		<!-- UX IMAGES -->
 		<section>
 			<header>
-				<h3>Nisl consequat</h3>
+				<h3>a quick and easy way to make memories</h3>
 				<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue.
 					Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia
 					ipsum maximus.</p>
@@ -93,7 +93,7 @@
 			<!-- CONTACT INFO FOOTER -->
 			<footer>
 				<ul class="items">
-					<li>
+					<!-- <li>
 						<h3>Email</h3>
 						<a href="#">information@untitled.ext</a>
 					</li>
@@ -104,7 +104,7 @@
 					<li>
 						<h3>Address</h3>
 						<span>1234 Somewhere Road, Nashville, TN 00000</span>
-					</li>
+					</li> -->
 					<li>
 						<h3>Elsewhere</h3>
 						<ul class="icons">
