draft3: adjust spacing & add UX color palette

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
 				<!-- MAIN LOGO -->
 				<h1 class="logo-text">one line a day</h1>
 				<!-- ONLINE STORE BUTTONS -->
-			<a href="#"><img class="image app-store-btn" src="images/apple-button.png" alt="Get it on iOS: Apple Store"></a>
-			<a href="#"><img class="image app-store-btn" src="images/google-play-button.png" alt="Get it on Android: Google Play Store"></a>
-				<!-- <p>a quick and easy way to make memories</p> -->
+				<a href="#" target="_blank"><img class="image app-store-btn" src="images/apple-button.png" alt="Get it on iOS: Apple Store"></a>
+				<a href="#" target="_blank"><img class="image app-store-btn" src="images/google-play-button.png" alt="Get it on Android: Google Play Store"></a>
 				<ul class="actions">
 					<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 				</ul>
@@ -43,10 +42,9 @@
 							<input type="text" name="password" id="password" placeholder="Password" />
 						</div>
 					</div>
-					<input id="login" type="submit" value="Login / Sign Up!" class="button primary" />
+					<input id="login" type="submit" value="Login / Sign Up" class="button primary" />
 				</form>
 
-				<!-- <h2>Login / Sign Up!</h2> -->
 			</header>
 			<!-- <div class="content">
 							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
@@ -56,8 +54,8 @@
 		<!-- UX IMAGES -->
 		<section>
 			<header>
-				<h3>a quick and easy way to make memories</h3>
-				<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue.
+				<h2>a quick and easy way to make memories</h2>
+				<p class="first-p">Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue.
 					Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia
 					ipsum maximus.</p>
 			</header>
