--- a/index.html
+++ b/index.html
@@ -52,12 +52,10 @@
 		</section>
 
 		<!-- UX IMAGES -->
-		<section>
+		<section id="first">
 			<header>
 				<h2>a quick and easy way to make memories</h2>
-				<p class="first-p">Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue.
-					Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia
-					ipsum maximus.</p>
+				<p class="first-p">This is the app version of the 10 year one line a day journal. Your daily entries for each day over 10 years are recorded, and you are reminded each day to record a short and sweet fact from your day- a funny quote, crazy milestone, or what you ate for dinner.</p>
 			</header>
 			<div class="content">
 				<div class="gallery">
@@ -71,11 +69,10 @@
 		<!-- FEATURES LIST -->
 		<section>
 			<header>
-				<h2>Feugiat consequat tempus ultrices</h2>
+				<h2>Users can log in and start making entries in their 10 year journal</h2>
 			</header>
 			<div class="content">
-				<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula
-					ultrices sed ultricies condimentum.</p>
+				<p>They can <strong>create, review, update,</strong> and <strong>delete</strong> data. The app functions as a journal and you can see all entries each day across 10 years at the same time.</p>
 				<ul class="feature-icons">
 					<li class="icon fa-laptop">Consequat tempus</li>
 					<li class="icon fa-bolt">Etiam adipiscing</li>
@@ -84,8 +81,7 @@
 					<li class="icon fa-map-marker">Lorem ipsum dolor</li>
 					<li class="icon fa-code">Nibh amet venenatis</li>
 				</ul>
-				<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat
-					nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+				<p>You will build a marketing page that matches the theme chosen by your group and provides the user with details about the product your team has chosen to build. Your landing page must include responsive mobile and desktop screen widths. You are to have a login button that links the user over to the main application. Your marketing page must be hosted.</p>
 			</div>
 
 			<!-- CONTACT INFO FOOTER -->
