--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<input type="text" name="password" id="password" placeholder="Password" />
 						</div>
 					</div>
-					<input id="login" type="submit" value="Login / Sign Up" class="button primary" />
+					<input id="login" type="submit" value="Log-In / Sign-Up" class="button primary" />
 				</form>
 
 			</header>
