desktop: fix text color & add arrow nav

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<section class="intro">
 			<header class="cta-header">
 				<!-- MAIN LOGO -->
+				<!-- <img class="logo-img" src="images/onelineaday_logo.png" alt="one line a day"> -->
 				<h1 class="logo-text">one line a day</h1>
 				<!-- ONLINE STORE BUTTONS -->
 				<a href="#" target="_blank"><img class="image app-store-btn" src="images/apple-button.png" alt="Get it on iOS: Apple Store"></a>
@@ -56,6 +57,9 @@
 			<header>
 				<h2>a quick and easy way to make memories</h2>
 				<p class="first-p">This is the app version of the 10 year one line a day journal. Your daily entries for each day over 10 years are recorded, and you are reminded each day to record a short and sweet fact from your day- a funny quote, crazy milestone, or what you ate for dinner.</p>
+				<ul class="actions">
+						<li><a href="#second" class="arrow scrolly"><span class="label">Next</span></a></li>
+					</ul>
 			</header>
 			<div class="content">
 				<div class="gallery">
@@ -67,7 +71,7 @@
 		</section>
 
 		<!-- FEATURES LIST -->
-		<section>
+		<section id="second">
 			<header>
 				<h2>Users can log in and start making entries in their 10 year journal</h2>
 			</header>
