add 'start today' button on page bottom

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div id="wrapper">
 
 		<!-- Intro -->
-		<section class="intro">
+		<section id="top-top" class="intro">
 			<header class="cta-header">
 				<!-- MAIN LOGO -->
 				<!-- <img class="logo-img" src="images/onelineaday_logo.png" alt="one line a day"> -->
@@ -56,10 +56,12 @@
 		<section id="first">
 			<header>
 				<h2>a quick and easy way to make memories</h2>
-				<p class="first-p">This is the app version of the 10 year one line a day journal. Your daily entries for each day over 10 years are recorded, and you are reminded each day to record a short and sweet fact from your day- a funny quote, crazy milestone, or what you ate for dinner.</p>
+				<p class="first-p">This is the app version of the 10 year one line a day journal. Your daily entries for each day
+					over 10 years are recorded, and you are reminded each day to record a short and sweet fact from your day- a funny
+					quote, crazy milestone, or what you ate for dinner.</p>
 				<ul class="actions">
-						<li><a href="#second" class="arrow scrolly"><span class="label">Next</span></a></li>
-					</ul>
+					<li><a href="#second" class="arrow scrolly"><span class="label">Next</span></a></li>
+				</ul>
 			</header>
 			<div class="content">
 				<div class="gallery">
@@ -76,7 +78,8 @@
 				<h2>Users can log in and start making entries in their 10 year journal</h2>
 			</header>
 			<div class="content">
-				<p>They can <strong>create, review, update,</strong> and <strong>delete</strong> data. The app functions as a journal and you can see all entries each day across 10 years at the same time.</p>
+				<p>They can <strong>create, review, update,</strong> and <strong>delete</strong> data. The app functions as a
+					journal and you can see all entries each day across 10 years at the same time.</p>
 				<ul class="feature-icons">
 					<li class="icon fa-laptop">Consequat tempus</li>
 					<li class="icon fa-bolt">Etiam adipiscing</li>
@@ -85,24 +88,19 @@
 					<li class="icon fa-map-marker">Lorem ipsum dolor</li>
 					<li class="icon fa-code">Nibh amet venenatis</li>
 				</ul>
-				<p>You will build a marketing page that matches the theme chosen by your group and provides the user with details about the product your team has chosen to build. Your landing page must include responsive mobile and desktop screen widths. You are to have a login button that links the user over to the main application. Your marketing page must be hosted.</p>
+				<p>You will build a marketing page that matches the theme chosen by your group and provides the user with details
+					about the product your team has chosen to build. Your landing page must include responsive mobile and desktop
+					screen widths. You are to have a login button that links the user over to the main application. Your marketing
+					page must be hosted.</p>
+					<ul class="actions">
+							<li><a href="#top-top" class="scrolly top-top"><center><i class="fa fa-arrow-up fa-5x"></i><br>Start Today</center></li>
+						</ul>
 			</div>
 
 			<!-- CONTACT INFO FOOTER -->
 			<footer>
-				<ul class="items">
-					<!-- <li>
-						<h3>Email</h3>
-						<a href="#">information@untitled.ext</a>
-					</li>
-					<li>
-						<h3>Phone</h3>
-						<a href="#">(000) 000-0000</a>
-					</li>
-					<li>
-						<h3>Address</h3>
-						<span>1234 Somewhere Road, Nashville, TN 00000</span>
-					</li> -->
+				
+				<!-- <ul class="items">
 					<li>
 						<h3>Elsewhere</h3>
 						<ul class="icons">
@@ -114,7 +112,7 @@
 							<li><a href="#" class="icon fa-codepen"><span class="label">Codepen</span></a></li>
 						</ul>
 					</li>
-				</ul>
+				</ul> -->
 			</footer>
 
 		</section>
@@ -125,7 +123,19 @@
 	</div> <!-- wrapper -->
 
 
-
+	<!-- example contact footer -->
+	<!-- <li>
+						<h3>Email</h3>
+						<a href="#">information@untitled.ext</a>
+					</li>
+					<li>
+						<h3>Phone</h3>
+						<a href="#">(000) 000-0000</a>
+					</li>
+					<li>
+						<h3>Address</h3>
+						<span>1234 Somewhere Road, Nashville, TN 00000</span>
+					</li> -->
 
 
 	<!-- Section EXAMPLE BUTTONS -->
