add logo img, restyle desktop display

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 		<section id="top-top" class="intro">
 			<header class="cta-header">
 				<!-- MAIN LOGO -->
-				<!-- <img class="logo-img" src="images/onelineaday_logo.png" alt="one line a day"> -->
-				<h1 class="logo-text">one line a day</h1>
+				<img class="logo-img" src="images/onelineaday_logo.png" alt="one line a day">
+				<!-- <h1 class="logo-text">one line a day</h1> -->
 				<!-- ONLINE STORE BUTTONS -->
-				<a href="#" target="_blank"><img class="image app-store-btn" src="images/apple-button.png" alt="Get it on iOS: Apple Store"></a>
-				<a href="#" target="_blank"><img class="image app-store-btn" src="images/google-play-button.png" alt="Get it on Android: Google Play Store"></a>
+
 				<ul class="actions">
 					<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 				</ul>
+				
 				<!-- LOGIN FORM -->
 				<form>
 					<div class="fields">
@@ -45,6 +45,11 @@
 					</div>
 					<input id="login" type="submit" value="Log-In / Sign-Up" class="button primary" />
 				</form>
+
+				<div class="store-buttons">
+						<a href="#" target="_blank"><img class="image app-store-btn" src="images/apple-button.png" alt="Get it on iOS: Apple Store"></a>
+						<a href="#" target="_blank"><img class="image app-store-btn" src="images/google-play-button.png" alt="Get it on Android: Google Play Store"></a>
+					</div>
 
 			</header>
 			<!-- <div class="content">
