--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<ul class="actions">
 					<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 				</ul>
-				
+
 				<!-- LOGIN FORM -->
 				<form>
 					<div class="fields">
@@ -70,9 +70,9 @@
 			</header>
 			<div class="content">
 				<div class="gallery">
-					<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-					<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-					<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+					<a href="images/ux-desktop.png" class="landscape"><img src="images/ux-desktop.png" alt="" /></a>
+					<a href="images/ux-phone.png"><img src="images/ux-phone.png" alt="" /></a>
+					<a href="images/ux-both.png"><img src="images/ux-both.png" alt="" /></a>
 				</div>
 			</div>
 		</section>
