update marketing copy

--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
 
 		<!-- UX IMAGES -->
 		<section id="first">
+
 			<header>
-				<h2>a quick and easy way to make memories</h2>
-				<p class="first-p">This is the app version of the 10 year one line a day journal. Your daily entries for each day
-					over 10 years are recorded, and you are reminded each day to record a short and sweet fact from your day- a funny
-					quote, crazy milestone, or what you ate for dinner.</p>
+				<h2>Years of Memories</h2>
+				<p class="first-p">One Line a Day is the app version of the popular one-line-a-day journal. Your daily entries are privately stored on your device (<a href="#top-top" class="scrolly top-top">mobile version</a>), or safely online if you use our <a href="#top-top" class="scrolly top-top">web-based version</a>. You can also choose to get regular reminders, so you’ll never forget to jot down something short and sweet from your day—a funny quote, crazy milestone, or even just what you ate for dinner.</p>
 				<ul class="actions">
 					<li><a href="#second" class="arrow scrolly"><span class="label">Next</span></a></li>
 				</ul>
 			</header>
+
 			<div class="content">
 				<div class="gallery">
 					<a href="images/ux-desktop.png" class="landscape"><img src="images/ux-desktop.png" alt="" /></a>
@@ -75,16 +75,17 @@
 					<a href="images/ux-both.png"><img src="images/ux-both.png" alt="" /></a>
 				</div>
 			</div>
-		</section>
+
+		</section> <!-- UX IMAGES-->
 
 		<!-- FEATURES LIST -->
 		<section id="second">
 			<header>
-				<h2>Users can log in and start making entries in their 10 year journal</h2>
+				<h2>Start today!</h2>
 			</header>
 			<div class="content">
-				<p>They can <strong>create, review, update,</strong> and <strong>delete</strong> data. The app functions as a
-					journal and you can see all entries each day across 10 years at the same time.</p>
+					<p>Download the <a href="#top-top" class="scrolly top-top">mobile app</a>, or <a href="#top-top" class="scrolly top-top">create an account</a> online, and start recording memories in your private journal!</p>
+					
 				<ul class="feature-icons">
 					<li class="icon fa-laptop">Consequat tempus</li>
 					<li class="icon fa-bolt">Etiam adipiscing</li>
@@ -93,19 +94,18 @@
 					<li class="icon fa-map-marker">Lorem ipsum dolor</li>
 					<li class="icon fa-code">Nibh amet venenatis</li>
 				</ul>
-				<p>You will build a marketing page that matches the theme chosen by your group and provides the user with details
-					about the product your team has chosen to build. Your landing page must include responsive mobile and desktop
-					screen widths. You are to have a login button that links the user over to the main application. Your marketing
-					page must be hosted.</p>
+
+				<p>You can <strong>create, review, update,</strong> and <strong>delete</strong> data. The app functions as a
+					journal and you can see all entries each day across 10 years at the same time.</p>
+
 					<ul class="actions">
 							<li><a href="#top-top" class="scrolly top-top"><center><i class="fa fa-arrow-up fa-5x"></i><br>Start Today</center></li>
 						</ul>
-			</div>
+			</div> <!-- FEATURES-->
 
 			<!-- CONTACT INFO FOOTER -->
-			<footer>
-				
-				<!-- <ul class="items">
+			<!-- <footer>
+				<ul class="items">
 					<li>
 						<h3>Elsewhere</h3>
 						<ul class="icons">
@@ -117,8 +117,8 @@
 							<li><a href="#" class="icon fa-codepen"><span class="label">Codepen</span></a></li>
 						</ul>
 					</li>
-				</ul> -->
-			</footer>
+				</ul>
+			</footer> -->
 
 		</section>
 
