remove login/password form & refactor display at all breakpoints

--- a/index.html
+++ b/index.html
@@ -21,50 +21,55 @@
 	<!-- Wrapper -->
 	<div id="wrapper">
 
-		<!-- Intro -->
+		<!-- Intro & CTA -->
 		<section id="top-top" class="intro">
 			<header class="cta-header">
+
 				<!-- MAIN LOGO -->
 				<img class="logo-img" src="images/onelineaday_logo.png" alt="one line a day">
-				<!-- <h1 class="logo-text">one line a day</h1> -->
-				<!-- ONLINE STORE BUTTONS -->
+				<h1 class="logo-text">one line a day</h1>
 
-				<ul class="actions">
-					<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
-				</ul>
-
-				<!-- LOGIN FORM -->
-				<form>
-					<div class="fields">
-						<div class="field half">
-							<input type="email" name="email" id="email" placeholder="Email" />
-						</div>
-						<div class="field half">
-							<input type="text" name="password" id="password" placeholder="Password" />
-						</div>
-					</div>
+				<!-- LOG-IN BUTTON -->
+				<form action="">
 					<input id="login" type="submit" value="Log-In / Sign-Up" class="button primary" />
 				</form>
 
-				<div class="store-buttons">
-						<a href="#" target="_blank"><img class="image app-store-btn" src="images/apple-button.png" alt="Get it on iOS: Apple Store"></a>
-						<a href="#" target="_blank"><img class="image app-store-btn" src="images/google-play-button.png" alt="Get it on Android: Google Play Store"></a>
-					</div>
-
 			</header>
-			<!-- <div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
-						</div> -->
-		</section>
 
-		<!-- UX IMAGES -->
+			<!-- APP STORE BUTTONS -->
+			<div class="content store-buttons">
+				<a href="#" target="_blank"><img class="image app-store-btn" src="images/apple-button.png" alt="Get it on iOS: Apple Store"></a>
+				<a href="#" target="_blank"><img class="image app-store-btn" src="images/google-play-button.png" alt="Get it on Android: Google Play Store"></a>
+			</div>
+
+		</section> <!-- //INTRO SECTION -->
+
+		<!-- first MARKETING COPY -->
 		<section id="first">
-
 			<header>
 				<h2>Years of Memories</h2>
-				<p class="first-p">One Line a Day is the app version of the popular one-line-a-day journal. Your daily entries are privately stored on your device (<a href="#top-top" class="scrolly top-top">mobile version</a>), or safely online if you use our <a href="#top-top" class="scrolly top-top">web-based version</a>. You can also choose to get regular reminders, so you’ll never forget to jot down something short and sweet from your day—a funny quote, crazy milestone, or even just what you ate for dinner.</p>
+
 				<ul class="actions">
 					<li><a href="#second" class="arrow scrolly"><span class="label">Next</span></a></li>
+				</ul>
+			</header>
+
+			<div class="content">
+				<p class="first-p">One Line a Day is the app version of the popular one-line-a-day journal. Your daily entries are
+					privately stored on your device (<a href="#top-top" class="scrolly top-top">mobile version</a>), or safely online
+					if you use our <a href="#top-top" class="scrolly top-top">web-based version</a>. You can also choose to get
+					regular reminders, so you’ll never forget to jot down something short and sweet from your day—a funny quote, crazy
+					milestone, or even just what you ate for dinner.</p>
+			</div>
+		</section> <!-- //first MARKETING COPY-->
+
+		<!-- second UX IMAGES -->
+		<section id="second">
+			<header>
+				<h2>User Experience</h2>
+
+				<ul class="actions">
+					<li><a href="#third" class="arrow scrolly"><span class="label">Next</span></a></li>
 				</ul>
 			</header>
 
@@ -75,17 +80,20 @@
 					<a href="images/ux-both.png"><img src="images/ux-both.png" alt="" /></a>
 				</div>
 			</div>
+		</section>
 
-		</section> <!-- UX IMAGES-->
 
-		<!-- FEATURES LIST -->
-		<section id="second">
+
+		<!-- third FEATURES LIST -->
+		<section id="third">
 			<header>
 				<h2>Start today!</h2>
 			</header>
+
 			<div class="content">
-					<p>Download the <a href="#top-top" class="scrolly top-top">mobile app</a>, or <a href="#top-top" class="scrolly top-top">create an account</a> online, and start recording memories in your private journal!</p>
-					
+				<p>Download the <a href="#top-top" class="scrolly top-top">mobile app</a>, or <a href="#top-top" class="scrolly top-top">create
+						an account</a> online, and start recording memories in your private journal!</p>
+
 				<ul class="feature-icons">
 					<li class="icon fa-laptop">Consequat tempus</li>
 					<li class="icon fa-bolt">Etiam adipiscing</li>
@@ -98,27 +106,32 @@
 				<p>You can <strong>create, review, update,</strong> and <strong>delete</strong> data. The app functions as a
 					journal and you can see all entries each day across 10 years at the same time.</p>
 
-					<ul class="actions">
-							<li><a href="#top-top" class="scrolly top-top"><center><i class="fa fa-arrow-up fa-5x"></i><br>Start Today</center></li>
-						</ul>
+				<!-- TOP TOP ARROW -->
+				<ul class="actions">
+					<li><a href="#top-top" class="scrolly top-top">
+						<center><i class="fa fa-arrow-up fa-5x"></i><br>Start Today</center>
+						</a>
+					</li>
+				</ul>
 			</div> <!-- FEATURES-->
 
 			<!-- CONTACT INFO FOOTER -->
-			<!-- <footer>
+			<footer>
 				<ul class="items">
 					<li>
-						<h3>Elsewhere</h3>
+						<h3>CONTACT</h3>
+						<a href="#">one.line.a.day@lambdabuildweeks.com</a>
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon fa-codepen"><span class="label">Codepen</span></a></li>
-						</ul>
+								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="#" class="icon fa-codepen"><span class="label">Codepen</span></a></li>
+							</ul>
 					</li>
 				</ul>
-			</footer> -->
+			</footer>
 
 		</section>
 
@@ -129,18 +142,7 @@
 
 
 	<!-- example contact footer -->
-	<!-- <li>
-						<h3>Email</h3>
-						<a href="#">information@untitled.ext</a>
-					</li>
-					<li>
-						<h3>Phone</h3>
-						<a href="#">(000) 000-0000</a>
-					</li>
-					<li>
-						<h3>Address</h3>
-						<span>1234 Somewhere Road, Nashville, TN 00000</span>
-					</li> -->
+	
 
 
 	<!-- Section EXAMPLE BUTTONS -->
