fix headers, center toptoparrow, etc

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 				<!-- TOP TOP ARROW -->
 				<ul class="actions">
 					<li><a href="#top-top" class="scrolly top-top">
-						<center><i class="fa fa-arrow-up fa-5x"></i><br>Start Today</center>
+						<i class="fa fa-arrow-up fa-5x"></i>
 						</a>
 					</li>
 				</ul>
