make arrow nav consistent, etc

--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
 				<img class="logo-img" src="images/onelineaday_logo.png" alt="one line a day">
 				<h1 class="logo-text">one line a day</h1>
 
-				<!-- LOG-IN BUTTON -->
-				<form action="">
-					<input id="login" type="submit" value="Log-In / Sign-Up" class="button primary" />
-				</form>
-
+				<!-- LOG IN SIGN UP BUTTON -->
+				<a href="#" target="_blank">
+					<div class="button primary log-in-btn">Log-In / Sign-Up</div>
+				</a>
 			</header>
 
 			<!-- APP STORE BUTTONS -->
@@ -42,7 +41,7 @@
 				<a href="#" target="_blank"><img class="image app-store-btn" src="images/google-play-button.png" alt="Get it on Android: Google Play Store"></a>
 			</div>
 
-		</section> <!-- //INTRO SECTION -->
+		</section> <!-- //INTRO -->
 
 		<!-- first MARKETING COPY -->
 		<section id="first">
@@ -50,18 +49,24 @@
 				<h2>Years of Memories</h2>
 
 				<ul class="actions">
-					<li><a href="#second" class="arrow scrolly"><span class="label">Next</span></a></li>
+					<li>
+						<a href="#second" class="scrolly">
+							<i class="fa fa-arrow-down fa-2x"></i>
+						</a>
+					</li>
+
+					<!-- <li><a href="#second" class="arrow scrolly"><span class="label">Next</span></a></li> -->
 				</ul>
 			</header>
 
 			<div class="content">
 				<p class="first-p">One Line a Day is the app version of the popular one-line-a-day journal. Your daily entries are
-					privately stored on your device (<a href="#top-top" class="scrolly top-top">mobile version</a>), or safely online
-					if you use our <a href="#top-top" class="scrolly top-top">web-based version</a>. You can also choose to get
+					privately stored on your device (mobile version), or safely online
+					if you use our web-based version. You can also choose to get
 					regular reminders, so you’ll never forget to jot down something short and sweet from your day—a funny quote, crazy
 					milestone, or even just what you ate for dinner.</p>
 			</div>
-		</section> <!-- //first MARKETING COPY-->
+		</section> <!-- //first -->
 
 		<!-- second UX IMAGES -->
 		<section id="second">
@@ -69,22 +74,30 @@
 				<h2>User Experience</h2>
 
 				<ul class="actions">
-					<li><a href="#third" class="arrow scrolly"><span class="label">Next</span></a></li>
+					<li>
+						<a href="#third" class="scrolly">
+							<i class="fa fa-arrow-down fa-2x"></i>
+						</a>
+					</li>
+
+
+					<!-- <li><a href="#third" class="arrow scrolly"><span class="label">Next</span></a></li> -->
 				</ul>
 			</header>
 
 			<div class="content">
 				<div class="gallery">
+					<!-- <small>Click to Expand</small> -->
 					<a href="images/ux-desktop.png" class="landscape"><img src="images/ux-desktop.png" alt="" /></a>
 					<a href="images/ux-phone.png"><img src="images/ux-phone.png" alt="" /></a>
 					<a href="images/ux-both.png"><img src="images/ux-both.png" alt="" /></a>
 				</div>
 			</div>
-		</section>
+		</section> <!-- //second-->
 
 
 
-		<!-- third FEATURES LIST -->
+		<!-- third FEATURES -->
 		<section id="third">
 			<header>
 				<h2>Start today!</h2>
@@ -108,12 +121,15 @@
 
 				<!-- TOP TOP ARROW -->
 				<ul class="actions">
-					<li><a href="#top-top" class="scrolly top-top">
-						<i class="fa fa-arrow-up fa-5x"></i>
-						</a>
+					<li>
+						<center>
+							<a href="#top-top" class="scrolly top-top">
+							<i class="fa fa-arrow-up fa-5x"></i>
+							</a>
+						</center>
 					</li>
 				</ul>
-			</div> <!-- FEATURES-->
+			</div> <!-- //third-->
 
 			<!-- CONTACT INFO FOOTER -->
 			<footer>
@@ -122,13 +138,13 @@
 						<h3>CONTACT</h3>
 						<a href="#">one.line.a.day@lambdabuildweeks.com</a>
 						<ul class="icons">
-								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon fa-codepen"><span class="label">Codepen</span></a></li>
-							</ul>
+							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="#" class="icon fa-codepen"><span class="label">Codepen</span></a></li>
+						</ul>
 					</li>
 				</ul>
 			</footer>
@@ -138,11 +154,11 @@
 		<!-- Copyright -->
 		<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
 
-	</div> <!-- wrapper -->
+	</div> <!-- //wrapper -->
 
 
 	<!-- example contact footer -->
-	
+
 
 
 	<!-- Section EXAMPLE BUTTONS -->
@@ -174,7 +190,7 @@
 								</header>
 								<div class="content">
 									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
+									This is <small>superscript</small> text and this is <small>subscript</small> text.
 									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
 									<hr />
 									<h2>Heading Level 2</h2>
