edit features section

--- a/index.html
+++ b/index.html
@@ -79,9 +79,6 @@
 							<i class="fa fa-arrow-down fa-2x"></i>
 						</a>
 					</li>
-
-
-					<!-- <li><a href="#third" class="arrow scrolly"><span class="label">Next</span></a></li> -->
 				</ul>
 			</header>
 
@@ -108,12 +105,10 @@
 						an account</a> online, and start recording memories in your private journal!</p>
 
 				<ul class="feature-icons">
-					<li class="icon fa-laptop">Consequat tempus</li>
-					<li class="icon fa-bolt">Etiam adipiscing</li>
-					<li class="icon fa-signal">Libero nullam</li>
-					<li class="icon fa-gear">Blandit condimentum</li>
-					<li class="icon fa-map-marker">Lorem ipsum dolor</li>
-					<li class="icon fa-code">Nibh amet venenatis</li>
+					<li class="icon fa-pencil-square-o">Create: One Line a Day</li>
+					<li class="icon fa-search">Review: Lines by Week, Month, and Year</li>
+					<li class="icon fa-file">Update: Things</li>
+					<li class="icon fa-trash">Delete: Anything / Everything</li>
 				</ul>
 
 				<p>You can <strong>create, review, update,</strong> and <strong>delete</strong> data. The app functions as a
@@ -157,27 +152,8 @@
 	</div> <!-- //wrapper -->
 
 
-	<!-- example contact footer -->
-
-
-
-	<!-- Section EXAMPLE BUTTONS -->
-	<!-- <section>
-		<header>
-			<h2>Duis sed adpiscing veroeros amet</h2>
-		</header>
-		<div class="content">
-			<p><strong>Proin tempus feugiat</strong> sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus,
-				ac varius enim lorem ullamcorper dolore.</p>
-			<ul class="actions">
-				<li><a href="#" class="button primary large">Get Started</a></li>
-				<li><a href="#" class="button large">Learn More</a></li>
-			</ul>
-		</div>
-	</section> -->
-
 	<!-- Elements -->
-	<!--
+<!-- 	
 					<section>
 						<header>
 							<h2>Elements</h2>
@@ -442,7 +418,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 
 						</div>
 					</section>
-				-->
+				 -->
 
 
 
