add greensock animation to custom slideshow

--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
 				</ul>
 			</header>
 
+			
+
 			<!-- custom slideshow component -->
 			<div class="content slide-show">
 				<i class="slides-btn-left fa fa-arrow-left fa-3x"></i>
@@ -431,6 +433,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 
 
 	<!-- Scripts -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/jquery.scrolly.min.js"></script>
 	<script src="assets/js/browser.min.js"></script>
