add gallery effect on slideshow img click

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 			
 
 			<!-- custom slideshow component -->
-			<div class="content slide-show">
+			<div class="content slide-show gallery-effect ">
 				<i class="slides-btn-left fa fa-arrow-left fa-3x"></i>
 					<div class="slide-show-slides">
 						<a href="images/ux-desktop.png"><img class="slides-img" src="images/ux-desktop.png" alt="desktop" /></a>
