--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 			
 
 			<!-- custom slideshow component -->
-			<div class="content slide-show gallery-effect ">
+			<div class="content slide-show">
 				<i class="slides-btn-left fa fa-arrow-left fa-3x"></i>
-					<div class="slide-show-slides">
+					<div class="slide-show-slides gallery-effect">
 						<a href="images/ux-desktop.png"><img class="slides-img" src="images/ux-desktop.png" alt="desktop" /></a>
 						<a href="images/ux-phone.png"><img class="slides-img" src="images/ux-phone.png" alt="phone" /></a>
 						<a href="images/ux-both.png"><img class="slides-img" src="images/ux-both.png" alt="both" /></a>
@@ -110,7 +110,7 @@
 			</header>
 
 			<div class="content">
-				<p>Download the <a href="#top-top" class="scrolly">mobile app</a>, or <a href="#top-top" class="scrolly">create
+				<p>Download the <a href="#top-top" class="scrolly">mobile app</a>, or <a href="https://blissful-mcnulty-5b5539.netlify.com/" target="_blank">create
 						an account</a> online, and start recording memories in your private journal!</p>
 
 				<ul class="feature-icons">
