--- a/index.html
+++ b/index.html
@@ -80,8 +80,6 @@
 				</ul>
 			</header>
 
-			
-
 			<!-- custom slideshow component -->
 			<div class="content slide-show">
 				<i class="slides-btn-left fa fa-arrow-left fa-3x"></i>
@@ -90,17 +88,8 @@
 						<a href="images/ux-phone.png"><img class="slides-img" src="images/ux-phone.png" alt="phone" /></a>
 						<a href="images/ux-both.png"><img class="slides-img" src="images/ux-both.png" alt="both" /></a>
 					</div>
-					<i class="slides-btn-right fa fa-arrow-right fa-3x"></i>
+				<i class="slides-btn-right fa fa-arrow-right fa-3x"></i>
 			</div>
-
-			<!-- default gallery -->
-			<!-- <div class="content">
-				<div class="gallery">
-					<a href="images/ux-desktop.png" class="landscape"><img src="images/ux-desktop.png" alt="" /></a>
-					<a href="images/ux-phone.png"><img src="images/ux-phone.png" alt="" /></a>
-					<a href="images/ux-both.png"><img src="images/ux-both.png" alt="" /></a>
-				</div>
-			</div> -->
 		</section> <!-- //second-->
 
 		<!-- third FEATURES -->
@@ -140,14 +129,12 @@
 				<ul class="items">
 					<li>
 						<h3>CONTACT</h3>
-						<a href="#">one.line.a.day@lambdabuildweeks.com</a>
+						<a href="#top-top" class="scrolly">one.line.a.day@lambdabuildweeks.com</a>
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon fa-codepen"><span class="label">Codepen</span></a></li>
+							<li><a href="https://github.com/one-line-a-day" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.facebook.com/LambdaSchoolOnline/" target= "_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.linkedin.com/in/ian-belknap-97858151/" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://twitter.com/Austen" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						</ul>
 					</li>
 				</ul>
